feat: finished create estate implementation (w/o open api)
