# handler/endpoints.go
@@ -15,3 +15,18 @@ func (s *Server) GetHello(ctx echo.Context, params generated.GetHelloParams) err
 	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
 	return ctx.JSON(http.StatusOK, resp)
 }
+
+func (s *Server) CreateEstate(ctx echo.Context) (err error) {
+	var createReq generated.CreateEstateJSONBody
+	err = ctx.Bind(&createReq)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid input"})
+	}
+
+	estateID, err := s.Repository.CreateEstate(ctx.Request().Context(), createReq.Length, createReq.Width)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Error Cui"})
+	}
+
+	return ctx.JSON(http.StatusCreated, map[string]string{"id": estateID})
+}
